Added Position Independent Code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.24)
 project(Slag)
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 include(FetchContent)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
